force-app/main/default/objects/SangDam__c/SangDam__c.object-meta.xml
<CustomObject>
    <label>상담</label>
    <nameField>
        <displayFormat>상담-{000000}</displayFormat>
        <label>상담 번호</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>