force-app/main/default/objects/SangDam__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <label>고객명</label>
    <length>18</length>
    <type>Text</type>
</CustomField>