force-app/main/default/objects/SangDam__c/fields/ConsentToCollection__c.field-meta.xml
<CustomField>
    <fullName>ConsentToCollection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>개인정보 수집 및 이용동의</description>
    <inlineHelpText>개인정보 수집 및 이용동의를 해주면 이름, 연락처, 이메일 기록으로 향후 상담에 도움.</inlineHelpText>
    <label>개인정보 수집 및 이용동의</label>
    <type>Checkbox</type>
</CustomField>