force-app/main/default/objects/SangDam__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>이메일주소 입력</description>
    <label>이메일</label>
    <type>Email</type>
</CustomField>