force-app/main/default/objects/SangDam__c/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <inlineHelpText>휴대번호 입력시 010-XXXX-XXXX 형식으로 입력해야합니다.
010외 011, 017 등 01X로 입력시 고객정보 생성이 불가능합니다.</inlineHelpText>
    <label>전화번호</label>
    <type>Phone</type>
</CustomField>