force-app/main/default/objects/SangDam__c/fields/SangDamDate__c.field-meta.xml
<CustomField>
    <fullName>SangDamDate__c</fullName>
    <label>상담일자</label>
    <type>Date</type>
</CustomField>