force-app/main/default/objects/SangDam__c/fields/SangDamDescription__c.field-meta.xml
<CustomField>
    <fullName>SangDamDescription__c</fullName>
    <description>상담내역 기입란</description>
    <label>상담내역</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>