force-app/main/default/objects/SangDam__c/fields/SangDamProgress__c.field-meta.xml
<CustomField>
    <fullName>SangDamProgress__c</fullName>
    <description>상담 진행현황 표시</description>
    <label>상담 진행현황</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>단순상담</fullName>
                <default>true</default>
                <label>단순상담</label>
            </value>
            <value>
                <fullName>구매조건 확인</fullName>
            </value>
            <value>
                <fullName>상담완료</fullName>
            </value>
            <value>
                <fullName>구매물품 견적</fullName>
                <isActive>false</isActive>
                <label>구매물품 견적</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>