force-app/main/default/objects/SangDam__c/fields/StoreName__c.field-meta.xml
<CustomField>
    <fullName>StoreName__c</fullName>
    <label>상담지점</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>울산점</fullName>
            </value>
            <value>
                <fullName>세종점</fullName>
            </value>
            <value>
                <fullName>서울강남점</fullName>
            </value>
            <value>
                <fullName>부산센텀시티점</fullName>
            </value>
            <value>
                <fullName>대구점</fullName>
            </value>
            <value>
                <fullName>광주점</fullName>
            </value>
            <value>
                <fullName>인천점</fullName>
            </value>
            <value>
                <fullName>대전점</fullName>
            </value>
            <value>
                <fullName>광주광역시</fullName>
                <isActive>false</isActive>
                <label>광주광역시</label>
            </value>
            <value>
                <fullName>대구광역시</fullName>
                <isActive>false</isActive>
                <label>대구광역시</label>
            </value>
            <value>
                <fullName>대전광역시</fullName>
                <isActive>false</isActive>
                <label>대전광역시</label>
            </value>
            <value>
                <fullName>부산광역시</fullName>
                <isActive>false</isActive>
                <label>부산광역시</label>
            </value>
            <value>
                <fullName>서울특별시</fullName>
                <isActive>false</isActive>
                <label>서울특별시</label>
            </value>
            <value>
                <fullName>세종특별자치시</fullName>
                <isActive>false</isActive>
                <label>세종특별자치시</label>
            </value>
            <value>
                <fullName>울산광역시</fullName>
                <isActive>false</isActive>
                <label>울산광역시</label>
            </value>
            <value>
                <fullName>인천광역시</fullName>
                <isActive>false</isActive>
                <label>인천광역시</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>