force-app/main/default/objects/SangDam__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountName__c</columns>
    <columns>SangDamDate__c</columns>
    <columns>SangDamProgress__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>